update incorporation pagee

--- a/onewaypath.com-html/incorporation-01.html
+++ b/onewaypath.com-html/incorporation-01.html
@@ -14,7 +14,7 @@
 	  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>One Way Path Group</title>
+      <title>One Way Path Legal Services</title>
       <script src='https://www.google.com/recaptcha/api.js'></script>
       <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="./incorporation/01/css/funding.css" />
@@ -92,7 +92,7 @@
         <section id="attention" data-identifier="page-section">
         	<figure>
         		<!-- <h2>ATTENTION</h2> -->
-        		<h3>Get Your Business Incorporated In Just 1 hour</h3>
+        		<h3>Learn How to Get Your Business Incorporated In Just 30 Minutes of Your Time</h3>
         		<h3>By An Expert In Law & Finance</h3>
         	</figure>
         </section>
@@ -100,9 +100,9 @@
         <section id="consultation​" data-identifier="page-section">
         	<figure>
         		<h2>Schedule a FREE<br>Consultation​</h2>
-        		<p>As someone running a new business you might feel overwhelmed with decisions such as <u>the right time to incorporate your business</u>, what <b>legal form</b> to choose, and otherconcerns that would require extensive research. <b>It could be difficult to fix mistakes in this area retroactively.</b></p>
+        		<p>As someone running a new business you might feel overwhelmed with decisions such as what <b>legal form</b> to choose, how to draft appropriate resolutions and by-laws, whether you need other documents like shareholder agreements, and other concerns that would require extensive research. <b>It could be difficult to fix mistakes in this area retroactively.</b></p>
         		<p>Do you agree that every minute you are investing into this could be a minute spent on actually generating income with your business instead?</p>
-				<p>If so, here is how you can get your startup or small-to-medium sized businessincorporated the right way while only investing 30 minutes of your time.</p>
+				<p>If so, would you like to deterimne whether you could get your startup or small-to-medium sized business incorporated the right way while only investing 30 minutes of your time?</p>
         		<!--
 				<div>
         			<div>
@@ -131,12 +131,12 @@
         		<!--
 				<h3>2 STEPS:</h3>
         		<h3>Your next project’s success</h3> -->
-        		<h6>STEP #1 Sign Up to Our Newsletter</h6>
-        		<p>Enter your name and email and click submit. Review our newsletters to get to know us and our expertise, or if you prefer, follow the link in the welcome email and proceed directly to Step #2</p>
-        		<h6>STEP #2 Free Consultation</h6>
-        		<p>Schedule a free consultation with our incorporation lawyer Alex Young who has also 16 years of experience in finances to find out if it's the right time to incorporate your business and what form of business organization you should use.</p>
-				<h6>STEP #3 1 Hour Meeting</h6>
-        		<p>Alex Young will take you through the whole process and document all thenecessary information to get your business incorporated. Please note thatbusiness setups of higher complexity might require more time.</p>
+        		<h6>STEP #1: Sign Up to Our Newsletter</h6>
+        		<p>Enter your name and email and click submit. Review our newsletters to get to know us and our expertise, or if you prefer, proceed directly to Step #2</p>
+        		<h6>STEP #2: Free Consultation</h6>
+        		<p>Schedule a free consultation with our incorporation lawyer Alex Young who also has 16 years of experience in finances to find out what is required to incorporate your business and whether you can benefit from our express business setup service.</p>
+				<h6>STEP #3: 30 Minute Meeting</h6>
+        		<p>Alex Young will discuss the process with you and determine what you will need to organize your business or non-profit organization the right way. Please note that business setups of higher complexity might require more time.</p>
         	</figure>
         </section>
 <!--
