--- a/onewaypath.com-html/incorporation-02.html
+++ b/onewaypath.com-html/incorporation-02.html
@@ -14,7 +14,7 @@
 	  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>One Way Path Group</title>
+      <title>One Way Path Legal Services</title>
 
       <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="./incorporation/02/css/funding.css" />
