--- a/html/owpg-main.html
+++ b/html/owpg-main.html
@@ -79,15 +79,15 @@
         					<img src="./owpg-main/images/service-1.png" alt="Incorporation" title="Incorporation" />
         					<span>Incorporation</span>
         				</a> -->
-      <h3> <img src="./owpg-main/images/MC-khmer-krom.png" alt="Incorporation" title="Incorporation" /> 
+      <h3> <img src="./owpg-main/images/MC-khmer-krom.png" alt="Incorporation" title="MC-khmer-krom" /> 
         <!-- <img src="./owpg-main/images/service-1.png" alt="Incorporation" title="Incorporation" /> --> 
         <span>Khmer Krom Buddhist Temple</span> </h3>
       <h3> <img src="./owpg-main/images/mc-chomtong.png" alt="Purchase and Sale" title="Purchase and Sale" /> 
         <!-- <img src="./owpg-main/images/service-2.png" alt="Purchase and Sale" title="Purchase and Sale" /> --> 
         <span>Meditation Residence (Chomtong, Thailand)</span> </h3>
-      <h3> <img src="./owpg-main/images/mc-buddhavipassana.png" alt="Secured Finance" title="Secured Finance" /> 
-        <!-- <img src="./owpg-main/images/service-3.png" alt="Secured Finance" title="Secured Finance" /> --> 
-        <span>Buddhavipassana Meditation Center</span> </h3>
+      <a href="https://buddhavipassana.ca"> <img src="./owpg-main/images/mc-buddhavipassana.png" alt="Secured Finance" title="Secured Finance" /> 
+        <img src="./owpg-main/images/mc-buddhavipassana-hover.png" alt="Secured Finance" title="Secured Finance" /> 
+        <span>Buddhavipassana Meditation Center</span> </a>
       <h3> <img src="./owpg-main/images/mc-on-num.png" alt="Secured Finance" title="Secured Finance" /> 
         <!-- <img src="./owpg-main/images/service-3.png" alt="Secured Finance" title="Secured Finance" /> --> 
         <span>On-Num Meditation Center</span> </h3>
@@ -99,8 +99,9 @@
     </figure>
     <figure>  
       <h2>Homes</h2>
-      <h3> <a href="https://onewaypath.com/edgehill" title=""><img src="./owpg-main/images/Barrie-ontario.png" alt="Incorporation" title="Incorporation" /> 
-        <!-- <img src="./owpg-main/images/service-1.png" alt="Incorporation" title="Incorporation" /> --> 
+      <h3> <a href="https://onewaypath.com/edgehill" title=""><img src="./owpg-main/images/Barrie-ontario.png" alt="Incorporation" title="Incorporation" />         
+       <img src="./owpg-main/images/homes-Barrie-Ontario-hover.png" alt="Incorporation" title="Incorporation" /> 
+
         <span>Barrie, Ontario</span></a> </h3>
       <h3> <img src="./owpg-main/images/Peterborough-Ontario.png" alt="Purchase and Sale" title="Purchase and Sale" /> 
         <!-- <img src="./owpg-main/images/service-2.png" alt="Purchase and Sale" title="Purchase and Sale" /> --> 
@@ -130,7 +131,7 @@
     <figure>
       <h2>Team</h2>
    
-       <a href="https://onewaypath.com/bio-ayoung" title=""><img src="owpg-main/images/photo-alex.jpg" alt="Incorporation" title="Incorporation"> 
+       <a href="https://onewaypath.com/bios" title=""><img src="owpg-main/images/photo-alex.jpg" alt="Incorporation" title="Incorporation"> 
         <!-- <img src="./owpg-main/images/service-1.png" alt="Incorporation" title="Incorporation" /> --> 
         <span>Alex Young</span>
         <p><em>President and Chief Executive Officer</em></p>
