--- a/html/edgehill-3.html
+++ b/html/edgehill-3.html
@@ -35,9 +35,9 @@
           <span>Numbers</span> 
         </a>
 
-          <a href="#bio" id="">
+<!--           <a href="#bio" id="">
           <figure> <img src="./edgehill-3/images/location-dark.png" alt="Location icon"> <img src="./edgehill-3/images/location-gold.png" alt="Location icon"> </figure>
-          <span>Location</span> </a>
+          <span>Location</span> </a> -->
 
           <a href="#team" id="">
           <figure> <img src="./edgehill-3/images/values-sustainable-dark.png" alt="Values icon"> <img src="./edgehill-3/images/values-sustainable-gold.png" alt="Values icon"> </figure>
@@ -116,7 +116,7 @@
       </div>
     </div>
   </section>
-  <section id="bio" class="location_section" data-identifier="page-section">
+<!--   <section id="bio" class="location_section" data-identifier="page-section">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-12 mb-5">
@@ -127,7 +127,7 @@
        
       </div>
     </div>
-  </section>
+  </section> -->
   <section id="team" data-identifier="page-section" class="value_section">
     <div class="container">
       <div class="row justify-content-center">
