--- a/html/edgehill-3.html
+++ b/html/edgehill-3.html
@@ -157,7 +157,7 @@
         		<img src="edgehill-3/images/values-sustainable-dark.png" class="img-fluid">
         		<h3>Sustainable</h3>
         	</div>
-        	<p class="mt-3">#76 Edgehill Drive is just 3 km from the Allandale Waterfront GO Station</p>
+        	<p class="mt-3">The proposed project site is just 3 km from the Allandale Waterfront GO Station</p>
         </div>
         <div class="col-lg-6 text-center">
         	<div class="d-flex align-items-center justify-content-center">
