--- a/Public/index.html
+++ b/Public/index.html
@@ -26,12 +26,10 @@
 <div class="page-container-wrap">
   <section id="home" data-identifier="page-section">
     <figure>
-      <h1>
-        <p>one way path</p>
-        <p>group</p>
+      <h1> one way path        
       </h1>
-      
-      <figure> <em><span class="d-block mt-50">liv.a.ble./*livab(a)//</span> <span><b>adjective : </b>worth living; enjoyable</span></em> </figure>
+      <h2>group</h2>      
+      <figure><h3>liv.a.ble./*livab(a)//</h3> <h4>adjective : </h4><p>worth living; enjoyable</p> </figure>
       <p><img src="./owpg-main/images/logo-bottom-border-img.png" alt=""></p>
     </figure>
     
