--- a/Public/index.html
+++ b/Public/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="./owpg-main/css/style.css" />
 </head>
 <body>
-<nav>
+<nav> 
   <button> <img src="./owpg-main/images/menu-icon.png" alt="Menu selector"> </button>
   <div class="scroll-menu-container"> <a href="#home" data-active="1">
     <figure> <img src="./owpg-main/images/home-icon-dark.png" alt="Home icon"> <img src="./owpg-main/images/home-icon.png" alt="Home icon"> </figure>
@@ -65,7 +65,7 @@
   <section id="bio">
     <figure>
       <h2>Values</h2>
-      <p>One Way Path Group is pursuing a vision of creating the world's most liveable communities. <br> Our mission is to develop high density living speces that are:
+      <p>One Way Path Group is pursuing a vision of creating the world's most liveable communities. <br> Our mission is to develop high density living Spaces that are:
    
       <h3> <img src="owpg-main/images/values-affordable.png" alt="Incorporation" title="Incorporation"> 
         
