--- a/Public/edgehill-3.html
+++ b/Public/edgehill-3.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="./edgehill-3/css/style.css" />
 </head>
-<body>
+<body> 
 <nav>
   <button> <img src="./edgehill-3/images/menu-icon.png" alt="Menu selector"> </button>
   <div> 
@@ -110,7 +110,7 @@
       	    <div class="text_wrap">
       		<!-- < <p><b class="font-weight-bold">Investor contact:</b> Alex Young / 416-848-1746 / ayoung@onewaypath.com </p> -->
       		<p class="mt-2 mb-0">This website contains forward-looking statements. </p>
-      		<p>Plese review the cautionary note regarding forward-looking statements</p>
+      		<p>Please review the cautionary note regarding forward-looking statements</p>
       		</div> 
       	</div>
       </div>
