--- a/Public/index.html
+++ b/Public/index.html
@@ -65,7 +65,7 @@
   <section id="bio">
     <figure>
       <h2>Values</h2>
-      <p>One Way Path Group is pursuing a vision of creating the world's most liveable communities. <br> Our mission is to develop high density living Spaces that are:
+      <p>One Way Path Group is pursuing a vision of creating the world's most liveable communities. <br> Our mission is to develop high density living spaces that are:
    
       <h3> <img src="owpg-main/images/values-affordable.png" alt="Incorporation" title="Incorporation"> 
         
