update section tag to header tag in "index.html"

--- a/Public/index.html
+++ b/Public/index.html
@@ -24,14 +24,14 @@
     <span>contact</span> </a> </div>
 </nav>
 <div class="page-container-wrap">
-	<section id="home" data-identifier="page-section">
+	<header id="home" data-identifier="page-section">
    
       <h1>one way path</h1>
 		<h2>group</h2>
 		<h3>liv.a.ble./*livab(a)//</h3> <h4>adjective : </h4><p>worth living; enjoyable</p>
 		<img src="./owpg-main/images/logo-bottom-border-img.png" alt="">
    
-    </section>
+    </header>
 	<section id="projects">
    
 		<h1>Meditation Centers</h1>
