--- a/Public/buddhavipassana.html
+++ b/Public/buddhavipassana.html
@@ -16,37 +16,37 @@
   <nav>
     <button> <img src="./buddhavipassana/images/menu-icon.png" alt="Menu selector"> </button>
     <div class="scroll-menu-container">
-      ​
+
       <a href="#home">
         <figure> <img src="./buddhavipassana/images/home-icon-dark.png" alt="Home icon"> <img
             src="./buddhavipassana/images/home-icon.png" alt="Home icon"> </figure>
         <h1>home</h1>
       </a>
-      ​
+
       <a href="#home" id="" data-active="1">
         <figure> <img src="./buddhavipassana/images/mc-buddhavipassana.png" alt="Bio icon"> <img
             src="./buddhavipassana/images/mc-buddhavipassana-hover.png" alt="Bio icon"> </figure>
         <h1>buddhavipassana</h1>
       </a>
-      ​
+
       <a href="#numbers" id="">
         <figure> <img src="./buddhavipassana/images/bio-icon-dark.png" alt="Bio icon"> <img
             src="./buddhavipassana/images/bio-icon-gold.png" alt="Bio icon"> </figure>
         <h1>Numbers</h1>
       </a>
-      ​
+
       <a href="#values" id="">
         <figure> <img src="./buddhavipassana/images/values-sustainable.png" alt="Bio icon"> <img
             src="./buddhavipassana/images/values-sustainable.png" alt="Bio icon"> </figure>
         <h1>Values</h1>
       </a>
-      ​
+
       <a href="#teacher" id="">
         <figure> <img src="./buddhavipassana/images/bio-icon-dark.png" alt="Bio icon"> <img
             src="./buddhavipassana/images/bio-icon-gold.png" alt="Bio icon"> </figure>
         <h1>Teacher</h1>
       </a>
-      ​
+
       <a href="#contact">
         <figure> <img src="./buddhavipassana/images/contact-icon-dark.png" alt="Contact icon"> <img
             src="./buddhavipassana/images/contact-icon-gold.png" alt="Contact icon"> </figure>
@@ -55,7 +55,7 @@
   </nav>
   <div class="page-container-wrap">
     <header id="home" data-identifier="page-section">
-      ​
+
       <h1>buddhavipassana</h1>
       <h2>Meditation center</h2>
       <p>
@@ -67,55 +67,55 @@
         </div>
       </p>
       <img src="./buddhavipassana/images/logo-bottom-border-img.png" alt="">
-      ​
+
     </header>
     <section id="numbers" data-identifier="page-section">
-      ​
+
       <h1>By the Numbers</h1>
-      ​
+
       <h2><span>550</span><span>Bookings <br>since 2015</span></h2>
-      ​
+
       <h2><span>5</span><span>Years of <br>Operation</span></h2>
-      ​
+
       <h2><span>94%</span><span>Satisfactions <br>Rate</span></h2>
-      ​
-      ​
+
+
     </section>
-    ​
+
     <section id="values" data-identifier="page-section">
-      ​
+
       <h2>Values</h2>
-      ​
-      ​
+
+
       <div>
         <img src="buddhavipassana/images/values-affordable.png" alt="Incorporation" title="Incorporation">
         <h3>Affordable</h3>
         <p>10 or 15-day retreats offered by donation.</p>
       </div>
-      ​
+
       <div>
         <img src="./buddhavipassana/images/values-sustainable.png" alt="Incorporation" title="Incorporation">
         <h3>Sustainable</h3>
         <p>An urban retreat Centre accessible by public transit</p>
       </div>
-      ​
+
       <div>
         <img src="buddhavipassana/images/values-healthy.png" alt="Incorporation" title="Incorporation">
         <h3>Healthy</h3>
         <p>A range of mental and physical health benefits confirmed by contemporary science</p>
       </div>
-      ​
-      ​
+
+
       <div>
         <img src="buddhavipassana/images/values-peacfule.png" alt="Incorporation" title="Incorporation" class="mr-0">
         <h3>Peaceful</h3>
         <p>Rooting the defilements of the mind that cause conflict</p>
       </div>
     </section>
-    ​
+
     <section id="strategic" data-identifier="page-section">
       <h2>Strategic Plan</h2>
-      ​
+
       <div>
         <h3>Double Occupancy <br>Capacity</h3>
         <p>Refinishing the basement to add space for 5 additional meditators</p>
@@ -128,125 +128,130 @@
         <h3>Outdoor <br>Meditation Hall</h3>
         <p>Addition of an outdoor meditation hall in the backyard</p>
       </div>
-      ​
+
     </section>
-    ​
+
     <section id="teacher" data-identifier="page-section">
-      <spa>
-        <h2>Teachers</h2>
-      </spa>
-      <div>
+      <figure>
+        <spa>
+          <h2>Teachers</h2>
+        </spa>
         <div>
-          <h2>VEN. AJAHN TONG SIRIMANGALO</h2>
-          <h4>Meditation Master</h4>
-          <p>Venerable Ajahn Tong has devoted his life to the practice and teaching of Satipatthana Vipassana
-            Kammatthana (insight meditation based on the four foundations of mindfulness). He has spent over 6 decades
-            of teaching meditation and establishing and expanding meditation centres throughout Thailand. He ordained as
-            a novice monk in 1934 and as a fullfledged monk in 1944 giving him 69 years as a monk and 79 years in robes.
-            <br>
-            Ajahn Tong is currently Abbot of a Buddhist Monastery called Wat Phradhatu Sri Chom Tong Voravihara in Ban
-            Luang Commune, ChomTong District, Chiang Mai Province which includes an international meditation centre and
-            approximately 300 meditation rooms. <br>
-            He is Chief Vipassana Kammatthana Master of the Northern Region of Thailand and is one of Thailand's most
-            highly respected meditation teachers. Spending most of his time teaching in Thailand, he has authorized
-            sev-eral teachers who have learned under his guidance to share this practice abroad.
-          </p>
-          ​
+          <div>
+            <h2>VEN. AJAHN TONG SIRIMANGALO</h2>
+            <span>Meditation Master</span>
+          </div>
+          <div>
+            <p>Venerable Ajahn Tong has devoted his life to the practice and teaching of Satipatthana Vipassana
+              Kammatthana (insight meditation based on the four foundations of mindfulness). He has spent over 6 decades
+              of teaching meditation and establishing and expanding meditation centres throughout Thailand. He ordained
+              as a novice monk in 1934 and as a fullfledged monk in 1944 giving him 69 years as a monk and 79 years in
+              robes. <br>
+              Ajahn Tong is currently Abbot of a Buddhist Monastery called Wat Phradhatu Sri Chom Tong Voravihara in Ban
+              Luang Commune, ChomTong District, Chiang Mai Province which includes an international meditation centre
+              and approximately 300 meditation rooms. <br>
+              He is Chief Vipassana Kammatthana Master of the Northern Region of Thailand and is one of Thailand's most
+              highly respected meditation teachers. Spending most of his time teaching in Thailand, he has authorized
+              sev-eral teachers who have learned under his guidance to share this practice abroad.
+            </p>
+            <img src="buddhavipassana/images/ven.ajahn.JPG" />
+          </div>
         </div>
         <div>
-          <img src="buddhavipassana/images/ven.ajahn.JPG" />
+          <div>
+            <h2>Thanat Chindaporn</h2>
+            <span>Visiting Teacher</span>
+
+
+          </div>
+
+          <div>
+            <p>Thanat Chindapom is a lay meditation teacher in the Theravada Buddhist tradition and is currently the
+              Director of the International Meditation Department at Wat Phradhatu Sri Chomtong Voravihara, Chomtong,
+              Chiangmai. <br>
+              He trained under Venerable Ajahn Tong Sirimangalo and the late Venerable Phra Banyat Akkayano, the former
+              director of Thailand's Northern Insight Meditation Centre.<br>
+              Since 1988, he has taught meditation in Thailand, India, Washington State, Puerto Rico, Hawaii,
+              California, Mexico, Canada, Germany, Slovenia, France, and brad. Bawd in Thailand for most of the year he
+              spends the summer months teaching western students internationally. In 2004, he received Thailand's
+              Benefactor of Buddhism Award, presented to him on behalf of Princess Maha Chakri Sirindhom of Thailand,
+              for his dissemination of Buddhism worldwide.
+            </p>
+            <img src="buddhavipassana/images/thanat-chindaporn.JPG" />
+          </div>
         </div>
-      </div>
-      <div>
+
         <div>
-          <h2>Thanat Chindaporn</h2>
-          <h4>Visiting Teacher</h4>
-          <p>Thanat Chindapom is a lay meditation teacher in the Theravada Buddhist tradition and is currently the
-            Director of the International Meditation Department at Wat Phradhatu Sri Chomtong Voravihara, Chomtong,
-            Chiangmai. <br>
-            He trained under Venerable Ajahn Tong Sirimangalo and the late Venerable Phra Banyat Akkayano, the former
-            director of Thailand's Northern Insight Meditation Centre.<br>
-            Since 1988, he has taught meditation in Thailand, India, Washington State, Puerto Rico, Hawaii, California,
-            Mexico, Canada, Germany, Slovenia, France, and brad. Bawd in Thailand for most of the year he spends the
-            summer months teaching western students internationally. In 2004, he received Thailand's Benefactor of
-            Buddhism Award, presented to him on behalf of Princess Maha Chakri Sirindhom of Thailand, for his
-            dissemination of Buddhism worldwide.
-          </p>
-          ​
-        </div>
-        ​
-        <div>
-          <img src="buddhavipassana/images/thanat-chindaporn.JPG" />
-        </div>
-      </div>
-      ​
-      <div>
-        ​
-        <div>
-          <h2>Sandra Young</h2>
-          <h4>Resident Teacher</h4>
-          <p>Sandra Young completed her basic course in insight meditation in 2002 with Edward Kooij in Hamilton, Canada
-            and continued practicing with Edward for several years. <br>
-            In 2016, Sandra traveled to Chorntong, Thailand where she remained resident for over a year to undertake the
-            teacher training under Thanat and Kate Chindapom. <br>
-            In 2017, Sandra was recognized on behalf of Chiang Mai Province, Thailand for her work to teach insight
-            meditation in Canada and Thailand. In 2018 she was appointed by Mahn Tong Sirimangalo to teach insight
-            meditation based on the four foundations of mindfulness. <br>
-            Sandra brings a long and varied professional experience to her meditation teaching having worked in
-            education policy, community development and in running her own African home furnishings business. She
-            currently lives in Toronto with her partner Patrick and teaches students regularly at the Buddhavipassana
-            Meditation Centre.
-          </p>
-          ​
-        </div>
-        <div>
-          <img src="buddhavipassana/images/sandra-young.JPG" />
-        </div>
-      </div>
-      <div>
-        <div>
-          <h2>Miriam Young</h2>
-          <h4>Resident Teacher</h4>
-          <p>Miriam Young completed her basic course in insight meditation in 2002 with Edward Kooij in Hamilton, Canada
-            and continued practicing with Edward as her teacher. <br>
-            She was later temporarily ordained as a Buddhist Nun (Maechee) in the Theravada tradition by Ajahn Tong
-            Sirimangalo from 2002 until 2004. During this time she began the meditation teacher training under Thanat
-            and Kate Chindapom and later also trained with Sandra Luz Cibrian. <br>
-            In 2013 she was appointed by Ajahn Tong Sirimangalo to teach insight meditation based on the four
-            foundations of mindfulness. In 2018, Miriam was presented with the Benefactor of Buddhism award by Princess
-            Maha Chakri Sirindhorn of Thailand for her teaching of insight meditation in Canada. <br>
-            She teaches meditation in English mostly in Toronto, Canada and from time to time at Chomtong Temple and
-            International Meditation Centre in Chiangmai, Thailand. She lives in Toronto with her husband, Alex, and
-            works as a registered nurse.
-          </p>
-          ​
+
+          <div>
+            <h2>Sandra Young</h2>
+            <span>Resident Teacher</span>
+
+
+          </div>
+          <div>
+            <p>Sandra Young completed her basic course in insight meditation in 2002 with Edward Kooij in Hamilton,
+              Canada and continued practicing with Edward for several years. <br>
+              In 2016, Sandra traveled to Chorntong, Thailand where she remained resident for over a year to undertake
+              the teacher training under Thanat and Kate Chindapom. <br>
+              In 2017, Sandra was recognized on behalf of Chiang Mai Province, Thailand for her work to teach insight
+              meditation in Canada and Thailand. In 2018 she was appointed by Mahn Tong Sirimangalo to teach insight
+              meditation based on the four foundations of mindfulness. <br>
+              Sandra brings a long and varied professional experience to her meditation teaching having worked in
+              education policy, community development and in running her own African home furnishings business. She
+              currently lives in Toronto with her partner Patrick and teaches students regularly at the Buddhavipassana
+              Meditation Centre.
+            </p>
+            <img src="buddhavipassana/images/sandra-young.JPG" />
+          </div>
         </div>
         <div>
-          <img src="buddhavipassana/images/miriam-young.JPG" />
+          <div>
+            <h2>Miriam Young</h2>
+            <span>Resident Teacher</span>
+
+
+          </div>
+          <div>
+            <p>Miriam Young completed her basic course in insight meditation in 2002 with Edward Kooij in Hamilton,
+              Canada and continued practicing with Edward as her teacher. <br>
+              She was later temporarily ordained as a Buddhist Nun (Maechee) in the Theravada tradition by Ajahn Tong
+              Sirimangalo from 2002 until 2004. During this time she began the meditation teacher training under Thanat
+              and Kate Chindapom and later also trained with Sandra Luz Cibrian. <br>
+              In 2013 she was appointed by Ajahn Tong Sirimangalo to teach insight meditation based on the four
+              foundations of mindfulness. In 2018, Miriam was presented with the Benefactor of Buddhism award by
+              Princess Maha Chakri Sirindhorn of Thailand for her teaching of insight meditation in Canada. <br>
+              She teaches meditation in English mostly in Toronto, Canada and from time to time at Chomtong Temple and
+              International Meditation Centre in Chiangmai, Thailand. She lives in Toronto with her husband, Alex, and
+              works as a registered nurse.
+            </p>
+            <img src="buddhavipassana/images/miriam-young.JPG" />
+          </div>
         </div>
-      </div>
-      <div>
         <div>
-          <h2>Alex Young</h2>
-          <h4>Resident Teacher</h4>
-          <p>Alex Young first began practicing insight meditation in Hamilton, Canada in 2001 and continued practicing
-            with Edward Kooij as his first teacher. <br>
-            He began teacher training under the guidance of Thanat and Kate Chindaporn in 2006 and later also with
-            Sandra Luz Cibrian. In 2013 he was appointed by Ajahn Tong Sirimangalo to teach insight meditation based on
-            the four foundations of mindfulness. He was later recognized for his teaching of insight meditation in
-            Canada by the Governor of Chiang Mai province.<br>
-            He teaches meditation in English and in French mostly in Toronto, Canada and from time to time at Chomtong
-            Temple and International Meditation Centre in Chiangmai, Thailand. He lives in Toronto with his wife,
-            Miriam, and works to support First Nations businesses.
-          </p>
-          ​
+          <div>
+            <h2>Alex Young</h2>
+            <span>Resident Teacher</span>
+
+
+          </div>
+          <div>
+            <p>Alex Young first began practicing insight meditation in Hamilton, Canada in 2001 and continued practicing
+              with Edward Kooij as his first teacher. <br>
+              He began teacher training under the guidance of Thanat and Kate Chindaporn in 2006 and later also with
+              Sandra Luz Cibrian. In 2013 he was appointed by Ajahn Tong Sirimangalo to teach insight meditation based
+              on the four foundations of mindfulness. He was later recognized for his teaching of insight meditation in
+              Canada by the Governor of Chiang Mai province.<br>
+              He teaches meditation in English and in French mostly in Toronto, Canada and from time to time at Chomtong
+              Temple and International Meditation Centre in Chiangmai, Thailand. He lives in Toronto with his wife,
+              Miriam, and works to support First Nations businesses.
+            </p>
+            <img src="buddhavipassana/images/alex-young-01.JPG" />
+          </div>
         </div>
-        <div>
-          <img src="buddhavipassana/images/alex-young-01.JPG" />
-        </div>
-      </div>
+      </figure>
     </section>
-    ​
+
     <footer id="contact" data-identifier="page-section">
       <h2>Contact</h2>
       <address>
@@ -258,9 +263,9 @@
         <p><b>E-Mail:</b> info@onewaypath.com</p>
         <p><b>Phone:</b> +1 416.848.1746</p>
       </address>
-      ​
-      ​
-      ​
+
+
+
       <p>Copyright 2019<br>
         onewaypath.com</p>
     </footer>
