complete newsletter component

--- a/Public/postOutput.html
+++ b/Public/postOutput.html
@@ -135,7 +135,7 @@
 <tr>
 <td id="m_5640241793615494444m_-8244975343849878056m_3744579026415683754text_div1508" class="m_5640241793615494444m_-8244975343849878056m_3744579026415683754td_text m_5640241793615494444m_-8244975343849878056m_3744579026415683754td_block" valign="top" align="left" style="color:inherit;font-size:inherit;font-weight:inherit;line-height:1;text-decoration:inherit;font-family:Arial"> 
 <div style="margin:0;outline:none;padding:0;font-size:16px">
-<div style="margin:0;outline:none;padding:0"> <span style="color:inherit;font-size:inherit;font-weight:inherit;line-height:inherit;text-decoration:inherit;font-family:verdana,arial,sans">%FIRSTNAME% –<p>ThisContent</p><br><br>Sincerely,<br><br><br>AlexYoung</span></div>
+<div style="margin:0;outline:none;padding:0"> <span style="color:inherit;font-size:inherit;font-weight:inherit;line-height:inherit;text-decoration:inherit;font-family:verdana,arial,sans">%FIRSTNAME% –<p>This Content</p>Sincerely,<br><br><br>Alex Young</span></div>
 </div>
 </td>
 </tr>
