--- a/Public/emailTemplate.html
+++ b/Public/emailTemplate.html
@@ -47,7 +47,7 @@
                                    <tr>
                                     <td>
                                       <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;">%FIRSTNAME% –</span><br><br>
-                                      <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;">[CONTENT GOES HERE]</span><br><br>
+                                      <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;"><section>[CONTENT GOES HERE]</section></span><br><br>
                                       <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;">Sincerely,</span><br><br><br>
                                       <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;">[NAME OF AUTHOR]</span>
                                    </td>
