--- a/Public/emailTemplate.html
+++ b/Public/emailTemplate.html
@@ -36,7 +36,7 @@
                                 <tbody>
                                    <tr>
                                       <td align="center">
-                                       <span style="color: #555; font-family: arial;font-size: 13px;">The Buddhavipassana Meditation Centre remains closed during the COVID-19 Emergency Period. The centre will re-open based on guidance from the Government of Ontario.
+                                       <span style="color: #555; font-family: arial;font-size: 13px;"><section>The Buddhavipassana Meditation Centre remains closed during the COVID-19 Emergency Period. The centre will re-open based on guidance from the Government of Ontario.</section>
                                        </span>
                                        </td>
                                    </tr>
@@ -46,10 +46,10 @@
                                 <tbody>
                                    <tr>
                                     <td>
-                                      <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;">%FIRSTNAME% –</span><br><br>
+                                      <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;"><section>%FIRSTNAME% –</section></span><br><br>
                                       <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;"><section>[CONTENT GOES HERE]</section></span><br><br>
-                                      <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;">Sincerely,</span><br><br><br>
-                                      <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;">[NAME OF AUTHOR]</span>
+                                      <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;"><section>Sincerely,</section></span><br><br><br>
+                                      <span style="font-family: verdana,arial,sans;font-weight: inherit;font-size: 16px;color: #000;"><section>[NAME OF AUTHOR]</section></span>
                                    </td>
                                    </tr>
                                 </tbody>
@@ -57,10 +57,10 @@
                              <table width="100%" border="0" cellpadding="8" cellspacing="0" >
                                 <tbody>
                                    <tr>
-                                      <td align="center">
+                                      <td align="center"><section>
                                          <div style="color: #555555; font-family: Arial; font-size: 12px;">Sent to: %EMAIL%</div>
                                          <div style="color: #555555; font-family: Arial; font-size: 12px;">%SENDER-INFO-SINGLELINE%</div>
-                                         <div style="color: #555555; font-family: Arial; font-size: 12px;">Don't want future emails?<a href="%UNSUBSCRIBELINK%">Unsubscribe</a></div>
+                                         <div style="color: #555555; font-family: Arial; font-size: 12px;">Don't want future emails?<a href="%UNSUBSCRIBELINK%">Unsubscribe</a></div></section>
                                       </td>
                                    </tr>
                                 </tbody>
