--- a/Public/buddhavipassana-2.html
+++ b/Public/buddhavipassana-2.html
@@ -46,7 +46,7 @@
         <p class="text-capitalize">Meditation Centre</p>
       </h1>
       <!-- <p><img src="./buddhavipassana-2/images/logo-bottom-border-img.png" alt="" /></p> -->
-      <figure><span class="text-wrap">The Buddhavipassana Meditaion Centre opened in 2015 to provide an opportunity for people in Southwestern Ontario and New York State to pracice Insight Medita-ion in the Northern Thai and Burmese tradiions. The Centre has accommodaion for up to ﬁve students for pe-riods ranging from a weekend to ﬁve days.</span></figure>
+      <figure><span class="text-wrap">The Buddhavipassana Meditaion Centre opened in 2015 to provide an opportunity for people in Southwestern Ontario and New York State to pracice Insight Meditaion in the Northern Thai and Burmese tradiions. The Centre has accommodaion for up to ﬁve students for periods ranging from a weekend to ﬁve days.</span></figure>
       <p><img src="./buddhavipassana-2/images/logo-bottom-border-img.png" alt=""></p>
     </figure>
     
@@ -132,8 +132,8 @@
             <div class="col-lg-9">           
           <div class="info_wrap">
              <p>Venerable Ajahn Tong has devoted his life to the practice and teaching of Satipatthana Vipassana Kammatthana (insight meditation based on the four foundations of mindfulness). He has spent over 6 decades of teaching meditation and establishing and expanding meditation centres throughout Thailand. He ordained as a novice monk in 1934 and as a full-fledged monk in 1944 giving him 69 years as a monk and 79 years in robes.</p>
-             <p>Ajahn Tong is currently Abbot of a Buddhist Monastery called Wat Phrad-hatu Sri Chom Tong Voravihara in Ban Luang Commune, ChomTong Dis-trict, Chiang Mai Province which includes an international meditation centre and approximately 300 meditation rooms.</p>
-             <p>He is Chief Vipassana Kammatthana Master of the Northern Region of Thailand and is one of Thailand’s most highly respected meditation teach-ers. Spending most of his time teaching in Thailand, he has authorized sev-
+             <p>Ajahn Tong is currently Abbot of a Buddhist Monastery called Wat Phradhatu Sri Chom Tong Voravihara in Ban Luang Commune, ChomTong District, Chiang Mai Province which includes an international meditation centre and approximately 300 meditation rooms.</p>
+             <p>He is Chief Vipassana Kammatthana Master of the Northern Region of Thailand and is one of Thailand’s most highly respected meditation teachers. Spending most of his time teaching in Thailand, he has authorized sev
 eral teachers who have learned under his guidance to share this practice abroad.</p>
           </div>
         </div>  
@@ -154,11 +154,11 @@ eral teachers who have learned under his guidance to share this practice abroad.
         </div>
             <div class="col-lg-9">           
           <div class="info_wrap">
-             <p>Thanat Chindaporn is a lay meditation teacher in the Theravada Buddhist tradition and is currently the Director of the International Meditation De-partment at Wat Phradhatu Sri Chomtong Voravihara, Chomtong, hiang-
+             <p>Thanat Chindaporn is a lay meditation teacher in the Theravada Buddhist tradition and is currently the Director of the International Meditation Department at Wat Phradhatu Sri Chomtong Voravihara, Chomtong, Chiang
 mai.</p>
-             <p>He trained under Venerable Ajahn Tong Sirimangalo and the late Venera-ble Phra Banyat Akkayano, the former director of Thailand’s Northern In-sight Meditation Centre.</p>
+             <p>He trained under Venerable Ajahn Tong Sirimangalo and the late Venerable Phra Banyat Akkayano, the former director of Thailand’s Northern Insight Meditation Centre.</p>
              <p>Since 1988, he has taught meditation in Thailand, India, Washington State, Puerto Rico, Hawaii, California, Mexico, Canada, Germany, Slovenia, France, and Israel. Based in Thailand for most of the year he spends the 
-summer months teaching western students internationally. In 2004, he re-ceived Thailand’s Benefactor of Buddhism Award, presented to him on behalf of Princess Maha Chakri Sirindhorn of Thailand, for his dissemination of Buddhism worldwide.</p>
+summer months teaching western students internationally. In 2004, he received Thailand’s Benefactor of Buddhism Award, presented to him on behalf of Princess Maha Chakri Sirindhorn of Thailand, for his dissemination of Buddhism worldwide.</p>
           </div>
         </div>  
           <div class="col-lg-3 text-center order-lg-1 order-first mb-lg-0 mb-4">          
