add buddhavipassana page

--- a/Public/index.html
+++ b/Public/index.html
@@ -40,7 +40,7 @@
 
 			<h2><img src="./owpg-main/images/mc-chomtong.png" alt="Meditation Residence (Chomtong, Thailand)" title="Purchase and Sale" />Meditation Residence (Chomtong, Thailand)</h2>
 
-			<h2><a href="https://buddhavipassana.ca"> <img src="./owpg-main/images/mc-buddhavipassana.png" alt="Buddhavipassana Meditation Center" title="Buddhavipassana Meditation Center" /> 
+			<h2><a href="buddhavipassana-2.html"> <img src="./owpg-main/images/mc-buddhavipassana.png" alt="Buddhavipassana Meditation Center" title="Buddhavipassana Meditation Center" /> 
 			<img src="./owpg-main/images/mc-buddhavipassana-hover.png" alt="Buddhavipassana Meditation Center" title="Buddhavipassana Meditation Center" />Buddhavipassana Meditation Center</a></h2>
 
 			<h2><img src="./owpg-main/images/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center" />On-Num Meditation Center</h2>
