--- a/Public/index.html
+++ b/Public/index.html
@@ -28,7 +28,7 @@
   
       <h1>one way path</h1>
 		<h2>GROUP</h2>
-		<figure><p>One Way Path Group is an international real estate development company devoted to public purpose invesing. We build high density living spaces and provide business services to partner developers to improve community well-being.</p></figure>
+		<figure><p>One Way Path Group is an international real estate development company devoted to public purpose investing. We build high density living spaces and provide business services to partner developers to improve community well-being.</p></figure>
     <h3><img src="./main/images/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><span>Meditation Centres</span></h3>
     <h3><img src="./main/images/Barrie-ontario.png" alt="Barrie, Ontario" title="Barrie, Ontario"><!-- <img src="./main/images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario"> --><span>Homes</span></h3>
 		<img src="./main/images/logo-bottom-border-img.png" alt="">
