--- a/Public/index.html
+++ b/Public/index.html
@@ -12,8 +12,8 @@
 <nav> 
   <button> <img src="./main/images/menu-icon.png" alt="Menu selector"> </button>
   <div class="scroll-menu-container"> <a href="#home" data-active="1">
-    <figure> <img src="./main/images/setting-icon-dark.png" alt="Home icon"> <img src="./main/images/setting-icon-gold.png" alt="Home icon"> </figure>
-    <h1>Services</h1> </a> 
+    <figure> <img src="./main/images/home-icon-dark.png" alt="Home icon"> <img src="./main/images/home-icon.png" alt="Home icon"> </figure>
+    <h1>Home</h1> </a> 
     
  <a href="#team" id="">
     <figure> <img src="./main/images/bio-icon-dark.png" alt="Bio icon"> <img src="./main/images/bio-icon-gold.png" alt="Bio icon"> </figure>
@@ -31,6 +31,7 @@
 		<figure><p>One Way Path Group is an international real estate development company devoted to public purpose investing. We build high density living spaces and provide business services to partner developers to improve community well-being.</p></figure>
     <h3><img src="./main/images/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><span>Meditation Centres</span></h3>
     <h3><img src="./main/images/Barrie-ontario.png" alt="Barrie, Ontario" title="Barrie, Ontario"><!-- <img src="./main/images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario"> --><span>Homes</span></h3>
+    <h3><img src="./main/images/gear.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><span>Services</span></h3>
 		<img src="./main/images/logo-bottom-border-img.png" alt="">
    
    
