--- a/Public/index.html
+++ b/Public/index.html
@@ -31,7 +31,7 @@
 		<figure><p>One Way Path Group is an international real estate development company devoted to public purpose investing. We build high density living spaces and provide business services to partner developers to improve community well-being.</p></figure>
     <h3><img src="./main/images/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><span>Meditation Centres</span></h3>
     <h3><img src="./main/images/Barrie-ontario.png" alt="Barrie, Ontario" title="Barrie, Ontario"><!-- <img src="./main/images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario"> --><span>Homes</span></h3>
-    <h3><img src="./main/images/gear.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><span>Services</span></h3>
+    <h3><img src="./main/images/gear-dark.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><span>Services</span></h3>
 		<img src="./main/images/logo-bottom-border-img.png" alt="">
    
    
