add homes and meditation

--- a/Public/homes.html
+++ b/Public/homes.html
@@ -22,7 +22,7 @@
     <a href="#home" data-active="1">
     <figure> <img src="./homes/images/Peterborough-Ontario-menu.png" alt="Home icon"> 
       <img src="./homes/images/Peterborough-Ontario-menu-gold.png" alt="Home icon"> </figure>
-    <h1>home</h1> </a>
+    <h1>homes</h1> </a>
 
     <a href="#benifits" data-active="1">
     <figure> <img src="./homes/images/benifits.png" alt="Home icon"> <img src="./homes/images/benifits-gold.png" alt="Home icon"> </figure>
@@ -34,7 +34,7 @@
 
     <a href="#team" data-active="1">
     <figure> <img src="./homes/images/bio-icon-dark.png" alt="Home icon"> <img src="./homes/images/bio-icon-gold.png" alt="Home icon"> </figure>
-    <h1>Benifits</h1> </a> 
+    <h1>Team</h1> </a> 
      
     <a href="#contact">
     <figure> <img src="./homes/images/contact-icon-dark.png" alt="Contact icon"> <img src="./homes/images/contact-icon-gold.png" alt="Contact icon"> </figure>
