--- a/Public/index.html
+++ b/Public/index.html
@@ -31,17 +31,17 @@
 <!-- <<<<<<< HEAD
 		<figure><p>One Way Path Group is an international real estate development company devoted to public purpose investing. We improve well-being by building liveable, high density communities and providing business services to partner developers.</p></figure>
     <h3><img src="./main/images/mc-on-num.png" alt="Meditation Centres" title="Meditation Centres"><span>Meditation Centres</span></h3>
-    <h3><img src="./main/images/Barrie-ontario.png" alt="Homeso" title="Homes"><!-- <img src="./main/images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario"><span>Homes</span></h3>
+    <h3><img src="./main/images/Barrie-ontario.png" alt="Homeso" title="Homes> <img src="./main/images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario"><span>Homes</span></h3>
     <h3><img src="./main/images/gear.png" alt="Services" title="Services" ><span>Services</span></h3>
 -->
 		<figure><p>One Way Path Group is an international real estate development company devoted to public purpose investing. We improve well-being by building liveable, high density communities and providing business services to partner developers.</p></figure>
-    <h3><img src="./main/images/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><span>Meditation Centres</span></h3>
-    <h3><img src="./main/images/Barrie-ontario.png" alt="Barrie, Ontario" title="Barrie, Ontario"><!-- <img src="./main/images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario"> --><span>Homes</span></h3>
+    <h3><a href="./meditation.html"><img src="./main/images/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><img src="./main/images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario"><span>Meditation Centres</span></a></h3>
+    <h3><a href="./homes.html"><img src="./main/images/Barrie-ontario.png" alt="Barrie, Ontario" title="Barrie, Ontario"><img src="./main/images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario"> <span>Homes</span></a></h3>
     <h3><img src="./main/images/gear-dark.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><span>Services</span></h3>
 		<img src="./main/images/logo-bottom-border-img.png" alt="">
    
    
-    </header>
+    </header
 <!-- 	<section id="projects">
    
 		<h1>Meditation Centers</h1>
